<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:font"/>
    <EditText
        android:id="@+id/edit_init"
        android:inputType="number"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message_init_bonus"
        android:layout_alignTop="@+id/edit_dex"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:maxLength="2"/>
    <EditText
        android:id="@+id/edit_dex"
        android:inputType="number"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message_dex_bonus"
        android:layout_alignTop="@+id/edit_int"
        android:layout_toEndOf="@+id/edit_init"
        android:gravity="center"
        android:maxLength="2"/>
    <EditText
        android:id="@+id/edit_int"
        android:inputType="number"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message_int_bonus"
        android:layout_alignTop="@+id/edit_wis"
        android:layout_toEndOf="@+id/edit_dex"
        android:gravity="center"
        android:maxLength="2"/>
    <EditText
        android:id="@+id/edit_wis"
        android:inputType="number"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message_wis_bonus"
        android:layout_alignBottom="@+id/add_to_init"
        android:layout_toEndOf="@+id/edit_int"
        android:gravity="center"
        android:maxLength="2"/>
    <Button
        android:id="@+id/add_to_init"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:layout_below="@+id/edit_name"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/edit_wis"/>
</RelativeLayout>
